# sentinelWebExtension

./: .env  .env.example  CLAUDE.md  README.md  cloudbuild.yaml  instruct.md  package-lock.json  summary-session  wxt.config.ts
.claude/: settings.local.json
backend/: Dockerfile  README.md  main.py  pyproject.toml  test_backend.py
backend/src/: crawl.py  llm.py  verify.py  website_verify.py
frontend/: .dockerignore  Dockerfile  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/.cursor/rules/: coding-best-practices.mdc
frontend/__tests__/api/: health.test.ts
frontend/__tests__/e2e/: auth-flow.test.ts  extension-chat-flow.test.ts  report-flow.test.ts
frontend/__tests__/lib/: format-relative-time.test.ts
frontend/__tests__/services/: ai-analysis.service.test.ts  auth.service.test.ts  category-ranking.service.test.ts  extension-report.service.test.ts  post-processing.service.test.ts  post.service.getPostById.test.ts  post.service.test.ts  report.service.test.ts  scraper.service.test.ts  search.service.test.ts
frontend/__tests__/utils/: get-source-type.test.ts  normalize-url.test.ts
frontend/__tests__/validators/: auth.validator.test.ts  category.validator.test.ts  (+3 more)
frontend/app/: globals.css  home.module.css  layout.tsx  page.tsx
frontend/lib/: api-base-url.ts  auth-client.ts  auth.ts  format-relative-time.ts  prisma.ts
frontend/prisma/: clear.ts  schema.prisma  seed.ts
frontend/types/: types.tsx
src/entrypoints/: background.ts  content.ts
src/lib/: config.ts  hackomania-api.ts
(+114 files in other folders)
