[project]
name = "natfanclub-backend"
version = "0.2.0"
description = "FactGuard FastAPI backend — crawl, verify, domain-check."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "openai>=1.0.0",
    # CORS + middleware already bundled with starlette (fastapi dep), listed for clarity.
    "starlette>=0.40.0",
    # HTTP client used by openai SDK and crawl
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]